# fly_stick

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
devices/thrustmaster/: ta320.toml  twcs.toml
examples/: device_pool.py  device_pool_block.py  multi_device.py  single_device.py
figures/: Thrustmaster_TA320_Copilot.drawio  Thrustmaster_TWCS_Throttle.drawio  thrustmaster.drawio
src/: lib.rs  utils.rs
src/fly_stick/: __init__.py  _core.pyi
src/inner/: description.rs  device_pool.rs  joystick.rs  mod.rs
src/wrapper/: device_pool_wrapper.rs  joystick_wrapper.rs  mod.rs
